--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "docs",
+  "name": "web",
   "version": "0.1.0",
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack --port 3001",
+    "dev": "next dev --turbopack --port 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint --max-warnings 0",
@@ -14,7 +14,8 @@
     "@repo/ui": "*",
     "next": "^15.3.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "@repo/db": "*"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
@@ -22,7 +23,10 @@
     "@types/node": "^22.15.3",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.28.0",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^3.4.17",
     "typescript": "5.8.2"
   }
 }
