feat: reorganize workspaces and add next-transpile-modules dependency
refactor: remove old migration file and create new migration with updated User and Merchant tables

feat: add store package with recoil for state management

feat: implement balance atom and custom hook for balance retrieval

chore: add TypeScript configuration for store package

--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   },
   "packageManager": "npm@11.1.0",
   "workspaces": [
-    "apps/*",
-    "packages/*"
+    "packages/*",
+    "apps/*"
   ],
   "dependencies": {
-    "next-auth": "^4.24.11"
+    "next-auth": "^4.24.11",
+    "next-transpile-modules": "^10.0.1"
   }
 }
